@@ -1,13 +1,0 @@
-<style scoped>
-    <?php include(dirname(__FILE__) . '/../../css/metadata.css'); ?>
-    <?php include(dirname(__FILE__) . '/../../css/inline.css'); ?>
-</style>
-<span>
-<a href="<?php echo htmlspecialchars($object_url, ENT_COMPAT, 'utf-8') ?>"><?php echo htmlspecialchars($title, ENT_COMPAT, 'utf-8') ?></a>
-    <?php if(!empty($metadata) || !empty($license)) {
-        echo '&nbsp;(<span style="display: inline-block">'.$license.'</span>';
-        if(!empty($metadata) && !empty($license))
-            echo '&nbsp|&nbsp';
-        echo '<span style="display: inline-block">'.$metadata.'</span>)';
-    }?>
-</span>
